Major Modifications to =PiT=
upgrade majority of prosilver 3.1.6 to the PiT theme

--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -74,14 +74,12 @@
 <div id="wrap">
 	<a id="top" class="anchor" accesskey="t"></a>
 	<div id="page-header">
+	<a href="{U_INDEX}">
 		<div class="headerbar" role="banner">
 			<div class="inner">
 
 			<div id="site-description">
-				<a id="logo" class="logo" href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITE_LOGO_IMG}</a>
-				<h1>{SITENAME}</h1>
-				<p>{SITE_DESCRIPTION}</p>
-				<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
+				 <div style="height: 85px;"></div>
 			</div>
 
 			<!-- EVENT overall_header_searchbox_before -->
@@ -100,6 +98,7 @@
 
 			</div>
 		</div>
+	</a>
 		<!-- EVENT overall_header_navbar_before -->
 		<!-- INCLUDE navbar_header.html -->
 	</div>
