--- a/template/quickreply_editor.html
+++ b/template/quickreply_editor.html
@@ -4,14 +4,15 @@
 		<div class="inner">
 				<h2 class="quickreply-title">{L_QUICKREPLY}</h2>
 				<fieldset class="fields1">
-					<dl style="clear: left;">
-						<dt><label for="subject">{L_SUBJECT}{L_COLON}</label></dt>
-						<dd><input type="text" name="subject" id="subject" size="45" maxlength="124" tabindex="2" value="{SUBJECT}" class="inputbox autowidth" /></dd>
-					</dl>
 				<!-- EVENT quickreply_editor_message_before -->
+				
+				<span class="quickreply">
 				<div id="message-box">
-					<textarea style="height: 9em;" name="message" rows="7" cols="76" tabindex="3" class="inputbox"></textarea>
+					<textarea style="height: 9em;width:100%" name="message" rows="7" cols="76" tabindex="3" class="inputbox"></textarea>
+
+
 				</div>
+				</span>
 				<!-- EVENT quickreply_editor_message_after -->
 				</fieldset>
 				<fieldset class="submit-buttons">
