--- a/template/forumlist_body.html
+++ b/template/forumlist_body.html
@@ -31,7 +31,8 @@
 		<!-- EVENT forumlist_body_forum_row_before -->
 		<li class="row">
 			<!-- EVENT forumlist_body_forum_row_prepend -->
-			<dl class="icon {forumrow.FORUM_IMG_STYLE}">
+			<dl class="icon <!-- IF forumrow.FORUM_NAME == 'Quake Live' -->QuakeLive<!-- ELSE -->{forumrow.FORUM_IMG_STYLE}<!-- ENDIF -->">
+
 				<dt title="{forumrow.FORUM_FOLDER_IMG_ALT}">
 					<!-- IF forumrow.S_UNREAD_FORUM --><a href="{forumrow.U_VIEWFORUM}" class="icon-link"></a><!-- ENDIF -->
 					<div class="list-inner">
