--- a/template/memberlist_team.html
+++ b/template/memberlist_team.html
@@ -18,20 +18,20 @@
 	</thead>
 	<tbody>
 <!-- BEGIN user -->
-	<tr class="<!-- IF group.user.S_ROW_COUNT is even -->bg1<!-- ELSE -->bg2<!-- ENDIF -->">
-		<td><!-- IF group.user.RANK_IMG --><span class="rank-img">{group.user.RANK_IMG}</span><!-- ELSE --><span class="rank-img">{group.user.RANK_TITLE}</span><!-- ENDIF -->{group.user.USERNAME_FULL}</td>
-		<td class="info"><!-- IF group.user.U_GROUP -->
+	<tr class="<!-- IF group.user.S_ROW_COUNT is even -->bg1<!-- ELSE -->bg2<!-- ENDIF -->" style="border: 0px;">
+		<td style="border: 0px;"><!-- IF group.user.RANK_IMG --><span class="rank-img">{group.user.RANK_IMG}</span><!-- ELSE --><span class="rank-img">{group.user.RANK_TITLE}</span><!-- ENDIF -->{group.user.USERNAME_FULL}</td>
+		<td class="info" style="border: 0px;"><!-- IF group.user.U_GROUP -->
 			<a<!-- IF group.user.GROUP_COLOR --> style="font-weight: bold; color: #{group.user.GROUP_COLOR}"<!-- ENDIF --> href="{group.user.U_GROUP}">{group.user.GROUP_NAME}</a>
 			<!-- ELSE -->
 				{group.user.GROUP_NAME}
 			<!-- ENDIF --></td>
 		<!-- IF S_DISPLAY_MODERATOR_FORUMS -->
-			<td class="info"><!-- IF group.user.FORUM_OPTIONS --><select style="width: 100%;">{group.user.FORUMS}</select><!-- ELSEIF group.user.FORUMS -->{group.user.FORUMS}<!-- ELSE -->-<!-- ENDIF --></td>
+			<td class="info" style="border: 0px;"><!-- IF group.user.FORUM_OPTIONS --><select style="width: 100%;">{group.user.FORUMS}</select><!-- ELSEIF group.user.FORUMS -->{group.user.FORUMS}<!-- ELSE -->-<!-- ENDIF --></td>
 		<!-- ENDIF -->
 	</tr>
 <!-- BEGINELSE -->
-	<tr class="bg1">
-		<td colspan="3"><strong>{L_NO_MEMBERS}</strong></td>
+	<tr class="bg1" style="border: 0px;">
+		<td colspan="3" style="border: 0px;"><strong>{L_NO_MEMBERS}</strong></td>
 	</tr>
 <!-- END user -->
 	</tbody>
