--- a/template/navbar_header.html
+++ b/template/navbar_header.html
@@ -29,8 +29,8 @@
 
 					<!-- IF not S_IS_BOT and (S_DISPLAY_MEMBERLIST or U_TEAM) -->
 						<li class="separator"></li>
-						<!-- IF S_DISPLAY_MEMBERLIST --><li class="small-icon icon-members"><a href="{U_MEMBERLIST}" role="menuitem">{L_MEMBERLIST}</a></li><!-- ENDIF -->
-						<!-- IF U_TEAM --><li class="small-icon icon-team"><a href="{U_TEAM}" role="menuitem">{L_THE_TEAM}</a></li><!-- ENDIF -->
+						<!-- IF S_DISPLAY_MEMBERLIST --><li class="small-icon icon-members1"><a href="{U_MEMBERLIST}" role="menuitem">{L_MEMBERLIST}</a></li><!-- ENDIF -->
+						<!-- IF U_TEAM --><li class="small-icon icon-team1"><a href="{U_TEAM}" role="menuitem">{L_THE_TEAM}</a></li><!-- ENDIF -->
 					<!-- ENDIF -->
 					<li class="separator"></li>
 
