--- a/template/overall_footer.html
+++ b/template/overall_footer.html
@@ -9,6 +9,7 @@
 	<div class="copyright">
 		<!-- EVENT overall_footer_copyright_prepend -->
 		{CREDIT_LINE}
+		<br />=PiT= Forum Style Hacked Together by Kamikazee & Blinkatesh
 		<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
 		<!-- EVENT overall_footer_copyright_append -->
 		<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
