--- a/theme/colours.css
+++ b/theme/colours.css
@@ -4,8 +4,8 @@ Colours and backgrounds for common.css
 -------------------------------------------------------------- */
 
 html, body {
-	color: #536482;
-	background-color: #F5F7FA;
+	color: ##CCCCCC;
+	background-color: #131313;
 }
 
 h1 {
@@ -13,12 +13,12 @@ h1 {
 }
 
 h2 {
-	color: #28313F;
+	color: #c2c2c2;
 }
 
 h3 {
 	border-bottom-color: #CCCCCC;
-	color: #115098;
+	color: #CCCCCC;
 }
 
 hr {
@@ -36,6 +36,14 @@ hr {
 	border-color: #C7C3BF;
 }
 
+.search-box .inputbox:hover{
+	border-color: gold;
+}
+
+.search-header .inputbox:hover{
+	border-color: gold;
+}
+
 .search-header {
 	box-shadow: 0 0 10px #0075B0;
 }
@@ -43,61 +51,61 @@ hr {
 /* Round cornered boxes and backgrounds
 ---------------------------------------- */
 #wrap {
-	background-color: #FFF;
-	border-color: #E6E9ED;
+	/*background-color: #FFF;
+	border-color: #E6E9ED;*/
 }
 
 .headerbar {
-	background-color: #12A3EB;
+	/*background-color: #12A3EB;
 	background-image: url("./images/bg_header.gif");
-	color: #FFFFFF;
+	color: #FFFFFF;*/
 }
 
 .navbar {
-	background-color: #cadceb;
+	background-color: #252525;
 }
 
 .forabg {
-	background-color: #0076b1;
+	background-color: #252525;
 	background-image: url("./images/bg_list.gif");
 }
 
 .forumbg {
-	background-color: #12A3EB;
-	background-image: url("./images/bg_header.gif");
+	background-color: #252525;
+	background-image: url("./images/bg_list.gif");
 }
 
 .panel {
-	background-color: #ECF1F3;
-	color: #28313F;
+	background-color: #252525;
+	color: #c2c2c2;
 }
 
 .post:target .content {
-	color: #000000;
+	color: #cccccc;
 }
 
 .post:target h3 a {
-	color: #000000;
+	color: #25a1cc;
 }
 
 .bg1 {
-	background-color: #ECF3F7;
+	background-color: #252525;
 }
 
 table.zebra-list tr:nth-child(odd) td, ul.zebra-list li:nth-child(odd) {
-	background-color: #ECF3F7;
+	/*background-color: #ECF3F7;*/
 }
 
 .bg2 {
-	background-color: #e1ebf2;
+	background-color: #252525;
 }
 
 table.zebra-list tr:nth-child(even) td, ul.zebra-list li:nth-child(even) {
-	background-color: #e1ebf2;
+	/*background-color: #e1ebf2;*/
 }
 
 .bg3	{
-	background-color: #cadceb;
+	background-color: #252525;
 }
 
 .ucprowbg {
@@ -112,7 +120,7 @@ table.zebra-list tr:nth-child(even) td, ul.zebra-list li:nth-child(even) {
 ----------------------------------------*/
 
 ul.navlinks {
-	border-top-color: #FFFFFF;
+	border-top-color: #4f4f4f;
 }
 
 /* Table styles
@@ -126,12 +134,11 @@ table.table1 tbody tr {
 }
 
 table.table1 tbody tr:hover, table.table1 tbody tr.hover {
-	background-color: #CFE1F6;
-	color: #000;
+	background-color: #383838;
 }
 
 table.table1 td {
-	color: #536482;
+	/*color: #536482;*/
 }
 
 table.table1 tbody td {
@@ -151,11 +158,11 @@ table.info tbody th {
 /* Misc layout styles
 ---------------------------------------- */
 dl.details dt {
-	color: #000000;
+	/*color: #000000;*/
 }
 
 dl.details dd {
-	color: #536482;
+	/*color: #536482;*/
 }
 
 .sep {
@@ -201,7 +208,7 @@ dl.details dd {
 ---------------------------------------- */
 
 .copyright {
-	color: #555555;
+	color: #bfbfbf;
 }
 
 .error {
@@ -246,8 +253,12 @@ p.post-notice.reported:before, p.post-notice.error:before {
 Colours and backgrounds for links.css
 -------------------------------------------------------------- */
 
-a { color: #105289; }
-a:hover	{ color: #D31141; }
+a { color: #25a1cc; }
+a:hover	{ color: gold; }
+
+a.forumtitle {
+	color: #3197f2;
+}
 
 /* Links on gradient backgrounds */
 .forumbg .header a, .forabg .header a, th a {
@@ -266,17 +277,16 @@ a:hover	{ color: #D31141; }
 /* Post body links */
 .postlink {
 	border-bottom-color: #368AD2;
-	color: #368AD2;
+	color: #5bc3e8;
 }
 
 .postlink:visited {
 	border-bottom-color: #5D8FBD;
-	color: #5D8FBD;
+	color: #5bc3e8;
 }
 
 .postlink:hover {
-	background-color: #D0E4F6;
-	color: #0D4473;
+	color: gold;
 }
 
 .signature a, .signature a:hover {
@@ -285,11 +295,11 @@ a:hover	{ color: #D31141; }
 
 /* Back to top of page */
 a.top {
-	background-image: url("./images/icon_back_top.gif");
+	background-image: url("./images/icon_back_top.png");
 }
 
 a.top2 {
-	background-image: url("./images/icon_back_top.gif");
+	background-image: url("./images/icon_back_top.png");
 }
 
 /* Arrow links  */
@@ -316,16 +326,15 @@ Colours and backgrounds for content.css
 -------------------------------------------------------------- */
 
 ul.forums {
-	background-color: #eef5f9;
-	background-image: url("./images/gradient.gif");
+	
 }
 
 ul.topiclist li {
-	color: #4C5D77;
+	color: #CCCCCC;
 }
 
 ul.topiclist dd {
-	border-left-color: #FFFFFF;
+	;
 }
 
 .rtl ul.topiclist dd {
@@ -342,21 +351,14 @@ ul.topiclist li.row dt a.subforum.unread {
 }
 
 li.row {
-	border-top-color:  #FFFFFF;
-	border-bottom-color: #00608F;
+	border-top: 1px solid #373737;
+	border-bottom: none;
 }
 
 li.row strong {
-	color: #000000;
+	color: #FFFFFF;
 }
 
-li.row:hover {
-	background-color: #F6F4D0;
-}
-
-li.row:hover dd {
-	border-left-color: #CCCCCC;
-}
 
 .rtl li.row:hover dd {
 	border-right-color: #CCCCCC;
@@ -370,22 +372,22 @@ li.header dt, li.header dd {
 /* Post body styles
 ----------------------------------------*/
 .postbody {
-	color: #333333;
+	color: #CCCCCC;
 }
 
 /* Content container styles
 ----------------------------------------*/
 .content {
-	color: #333333;
+	color: #CCCCCC;
 }
 
 .content h2, .panel h2 {
-	color: #115098;
-	border-bottom-color:  #CCCCCC;
+	color: #89c9e1;
+	border-bottom-color:  #4f4f4f;
 }
 
 dl.faq dt {
-	color: #333333;
+	color: #CCCCCC;
 }
 
 .posthilit {
@@ -411,13 +413,13 @@ dl.faq dt {
 ----------------------------------------*/
 /* Quote block */
 blockquote {
-	background-color: #EBEADD;
-	background-image: url("./images/quote.gif");
-	border-color:#DBDBCE;
+	background-image: url("./images/quote.png");
+	color: #CCCCCC;
+	background-color: transparent;
 }
 
 .rtl blockquote {
-	background-image: url("./images/quote_rtl.gif");
+	background-image: url("./images/quote_rtl.png");
 }
 
 blockquote blockquote {
@@ -432,8 +434,11 @@ blockquote blockquote blockquote {
 
 /* Code block */
 .codebox {
-	background-color: #FFFFFF;
-	border-color: #C9D2D8;
+	background-color: #303030;
+	border-color: #303030;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
 }
 
 .codebox p {
@@ -441,21 +446,30 @@ blockquote blockquote blockquote {
 }
 
 .codebox code {
-	color: #2E8B57;
+	color: #fff;
 }
 
+/*
 .syntaxbg		{ color: #FFFFFF; }
 .syntaxcomment	{ color: #FF8000; }
 .syntaxdefault	{ color: #0000BB; }
 .syntaxhtml		{ color: #000000; }
 .syntaxkeyword	{ color: #007700; }
-.syntaxstring	{ color: #DD0000; }
+.syntaxstring	{ color: #DD0000; }*/
+
+.syntaxbg		{ color: #FFFFFF; }
+.syntaxcomment	{ color: #ff8400; }
+.syntaxdefault	{ color: #14bbc4; }
+.syntaxhtml		{ color: #fff; }
+.syntaxkeyword	{ color: #fff; }
+.syntaxstring	{ color: #00cb1e; }
 
 /* Attachments
 ----------------------------------------*/
 .attachbox {
-	background-color: #FFFFFF;
+	background-color: #1f1f1f;
 	border-color:  #C9D2D8;
+	color: #CCCCCC;
 }
 
 .pm-message .attachbox {
@@ -506,15 +520,15 @@ dl.thumbnail dt a:hover img {
 
 fieldset.polls dl {
 	border-top-color: #DCDEE2;
-	color: #666666;
+	color: #c2c2c2;
 }
 
 fieldset.polls dl.voted {
-	color: #000000;
+	color: #c2c2c2;
 }
 
 fieldset.polls dd div {
-	color: #FFFFFF;
+	color: #c2c2c2;
 }
 
 .rtl .pollbar1, .rtl .pollbar2, .rtl .pollbar3, .rtl .pollbar4, .rtl .pollbar5 {
@@ -574,8 +588,7 @@ fieldset.polls dd div {
 /* Poster profile block
 ----------------------------------------*/
 .postprofile {
-	color: #666666;
-	border-color: #FFFFFF;
+	color: #bdbdbd;
 }
 
 .pm .postprofile {
@@ -583,11 +596,19 @@ fieldset.polls dd div {
 }
 
 .postprofile strong {
-	color: #000000;
+	color: #FFFFFF;
+}
+
+.online .postprofile {
+	border-left: solid 3px #007aa7;
 }
 
 .online {
-	background-image: url("./en/icon_user_online.gif");
+
+}
+
+.online dt {
+	margin-top: 5px;
 }
 
 dd.profile-warnings {
@@ -609,6 +630,7 @@ Colours and backgrounds for buttons.css
 	box-shadow: 0 0 0 1px #FFFFFF inset;
 	-webkit-box-shadow: 0 0 0 1px #FFFFFF inset;
 	color: #D31141;
+
 }
 
 .dropdown-select {
@@ -623,6 +645,7 @@ Colours and backgrounds for buttons.css
 	background-image: linear-gradient(to bottom, #E9E9E9, #FFFFFF);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#E9E9E9', EndColorStr='#FFFFFF')";
 	text-shadow: 1px 1px 0 #FFFFFF, -1px -1px 0 #FFFFFF, -1px -1px 0 rgba(188, 42, 77, 0.2);
+
 }
 
 .dropdown-select:after	{ border-color: #DADADA; }
@@ -650,6 +673,7 @@ Colours and backgrounds for buttons.css
 .icon-mark					{ background-image: url("./images/icon_mark.gif"); }
 .icon-mcp					{ background-image: url("./images/icon_mcp.gif"); }
 .icon-members				{ background-image: url("./images/icon_members.gif"); }
+.icon-members1				{ background-image: url("./images/icon_members1.gif"); }
 .icon-notification			{ background-image: url("./images/icon_notification.gif"); }
 .icon-pages					{ background-image: url("./images/icon_pages.gif"); }
 .icon-pm					{ background-image: url("./images/icon_pm.gif"); }
@@ -659,12 +683,13 @@ Colours and backgrounds for buttons.css
 .icon-search, .responsive-search a	{ background-image: url("./images/icon_search.gif"); }
 .icon-search-active			{ background-image: url("./images/subforum_read.gif"); }
 .icon-search-new			{ background-image: url("./images/subforum_unread.gif"); }
-.icon-search-self			{ background-image: url("./images/icon_topic_latest.gif"); }
+.icon-search-self			{ background-image: url("./images/icon_topic_latest1.gif"); }
 .icon-search-unanswered		{ background-image: url("./images/icon_post_target.gif"); }
 .icon-search-unread			{ background-image: url("./images/subforum_unread.gif"); }
 .icon-sendemail				{ background-image: url("./images/icon_sendemail.gif"); }
 .icon-subscribe				{ background-image: url("./images/icon_subscribe.gif"); }
 .icon-team					{ background-image: url("./images/icon_team.gif"); }
+.icon-team1					{ background-image: url("./images/icon_team1.gif"); }
 .icon-ucp					{ background-image: url("./images/icon_ucp.gif"); }
 .icon-unsubscribe			{ background-image: url("./images/icon_unsubscribe.gif"); }
 
@@ -693,6 +718,7 @@ Colours and backgrounds for buttons.css
 
 .forum_link														{ background-image: url("./images/forum_link.gif"); }
 .forum_read														{ background-image: url("./images/forum_read.gif"); }
+.QuakeLive 														{ background-image: url("./images/quakeliveicon30.png"); }
 .forum_read_locked												{ background-image: url("./images/forum_read_locked.gif"); }
 .forum_read_subforum											{ background-image: url("./images/forum_read_subforum.gif"); }
 .forum_unread													{ background-image: url("./images/forum_unread.gif"); }
@@ -747,11 +773,11 @@ ul.cplist {
 }
 
 .panel-container .panel li.header dd, .panel-container .panel li.header dt {
-	color: #000000;
+	color: #c2c2c2;
 }
 
 .panel-container table.table1 thead th {
-	color: #333333;
+	color: #c2c2c2;
 	border-bottom-color: #333333;
 }
 
@@ -763,32 +789,30 @@ ul.cplist {
 /* CP tabbed menu
 ----------------------------------------*/
 #tabs .tab > a {
-	background: #BACCD9;
-	color: #536482;
+	background: #383838;
+	/*color: #536482;
+	background-image: url("./images/bg_tabs1.gif");*/
 }
 
 #tabs .tab > a:hover {
-	background: #DDEDFB;
-	color: #D31141;
+	background: #252525;
 }
 
 #tabs .activetab > a,
 #tabs .activetab > a:hover {
-	background: #CADCEB;
-	background: -moz-linear-gradient(top, #E2F2FF 0%, #CADCEB 100%);
+	background: #252525;
+	/*background: -moz-linear-gradient(top, #E2F2FF 0%, #252525 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #E2F2FF), color-stop(100%, #CADCEB));
 	background: -webkit-linear-gradient(top, #E2F2FF 0%, #CADCEB 100%);
-	background: -o-linear-gradient(top, #E2F2FF 0%, #CADCEB 100%);
-	background: -ms-linear-gradient(top, #E2F2FF 0%, #CADCEB 100%);
-	background: linear-gradient(to bottom, #E2F2FF 0%, #CADCEB 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E2F2FF', endColorstr='#CADCEB', GradientType=0 );
-	border-color: #CADCEB;
-	box-shadow: 0 1px 1px #F2F9FF inset;
-	color: #333333;
+	background: -o-linear-gradient(top, #E2F2FF 0%, #252525 100%);
+	background: -ms-linear-gradient(top, #E2F2FF 0%, #252525 100%);
+	background: linear-gradient(to bottom, #E2F2FF 0%, #252525 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E2F2FF', endColorstr='#252525', GradientType=0 );*/
+	/*color: #CCCCCC;*/
 }
 
 #tabs .activetab > a:hover {
-	color: #000000;
+	/*color: #000000;*/
 }
 
 /* Mini tabbed menu used in MCP
@@ -818,7 +842,7 @@ ul.cplist {
 
 /* Link styles for the sub-section links */
 #navigation a {
-	color: #333;
+	/*color: #333;
 	background: #B4C4D1;
 	background: -moz-linear-gradient(left, #B4C4D1 50%, #CADCEB 100%);
 	background: -webkit-gradient(left top, right top, color-stop(50%, #B4C4D1), color-stop(100%, #CADCEB));
@@ -826,34 +850,50 @@ ul.cplist {
 	background: -o-linear-gradient(left, #B4C4D1 50%, #CADCEB 100%);
 	background: -ms-linear-gradient(left, #B4C4D1 50%, #CADCEB 100%);
 	background: linear-gradient(to right, #B4C4D1 50%, #CADCEB 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#B4C4D1', endColorstr='#CADCEB', GradientType=1 );
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#B4C4D1', endColorstr='#CADCEB', GradientType=1 );*/
+	color: #CCCCCC;
+	background-color: transparent;
+	background-image: none;
+	border-left: 2px solid #474747;
 }
 
 .rtl #navigation a {
-	background: #B4C4D1;
+	/*background: #B4C4D1;
 	background: -moz-linear-gradient(left, #CADCEB 0%, #B4C4D1 50%);
 	background: -webkit-gradient(left top, right top, color-stop(0%, #CADCEB), color-stop(50%, #B4C4D1));
 	background: -webkit-linear-gradient(left, #CADCEB 0%, #B4C4D1 50%);
 	background: -o-linear-gradient(left, #CADCEB 0%, #B4C4D1 50%);
 	background: -ms-linear-gradient(left, #CADCEB 0%, #B4C4D1 50%);
 	background: linear-gradient(to right, #CADCEB 0%, #B4C4D1 50%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#CADCEB', endColorstr='#B4C4D1', GradientType=1 );
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#CADCEB', endColorstr='#B4C4D1', GradientType=1 );*/
+	background-image: none;
+	background-position: 0 100%;
 }
 
 #navigation a:hover {
-	background: #AABAC6;
+	/*background: #AABAC6;
 	color: #BC2A4D;
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);*/
+	background-image: none;
+	background-color: transparent;
+	color: #2ca0cb;
+	border-left: 2px solid #007aa7;
 }
 
 #navigation #active-subsection a {
-	background: #F9F9F9;
+	/*background: #F9F9F9;
 	color: #D31141;
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);*/
+	color: #c7dae2;
+	background-color: transparent;
+	background-image: none;
+	border-left: 2px solid #007aa7;
 }
 
 #navigation #active-subsection a:hover {
-	color: #D31141;
+	/*color: #D31141;*/
+	background-color: transparent;
+	color: #2ca0cb;
 }
 
 @media only screen and (max-width: 900px), only screen and (max-device-width: 900px)
@@ -866,11 +906,11 @@ ul.cplist {
 /* Preferences pane layout
 ----------------------------------------*/
 .panel-container h2 {
-	color: #333333;
+	color: #c2c2c2;
 }
 
 .panel-container .panel {
-	background-color: #F9F9F9;
+	background-color: #383838;
 }
 
 #cp-main .pm {
@@ -879,11 +919,11 @@ ul.cplist {
 
 /* Friends list */
 .cp-mini {
-	background-color: #eef5f9;
+	background-color: #383838;
 }
 
 dl.mini dt {
-	color: #425067;
+	/*color: #425067;*/
 }
 
 /* PM Styles
@@ -933,13 +973,18 @@ Colours and backgrounds for forms.css
 /* General form styles
 ----------------------------------------*/
 select {
+	border-color: #007aa7; /*#666666;*/
+	background-color: #1c1c1c;/*#FAFAFA;*/
+	color: #CCCCCC; /*#000;*/
 	border-color: #666666;
 	background-color: #FAFAFA;
 	color: #000;
 }
 
+/*select:focus {  border-color: gold; }*/
+
 label {
-	color: #425067;
+	color: #CCCCCC;
 }
 
 option.disabled-option {
@@ -949,7 +994,7 @@ option.disabled-option {
 /* Definition list layout for forms
 ---------------------------------------- */
 dd label {
-	color: #333;
+	/*color: #333;*/
 }
 
 fieldset.fields1 {
@@ -958,7 +1003,7 @@ fieldset.fields1 {
 
 /* Hover effects */
 fieldset dl:hover dt label {
-	color: #000000;
+	/*color: #000000;*/
 }
 
 fieldset.fields2 dl:hover dt label {
@@ -974,7 +1019,7 @@ fieldset.quick-login input.inputbox {
 ----------------------------------------*/
 
 #message-box textarea {
-	color: #333333;
+	color: #CCCCCC;
 }
 
 #message-box textarea.drag-n-drop {
@@ -988,9 +1033,9 @@ fieldset.quick-login input.inputbox {
 /* Input field styles
 ---------------------------------------- */
 .inputbox {
-	background-color: #FFFFFF;
-	border-color: #B4BAC0;
-	color: #333333;
+    border-color: #007aa7;
+        background-color: #1c1c1c;
+	color: #CCCCCC;
 }
 
 .inputbox:-moz-placeholder {
@@ -1002,12 +1047,12 @@ fieldset.quick-login input.inputbox {
 }
 
 .inputbox:hover {
-	border-color: #11A3EA;
+	border-color: gold;
 }
 
 .inputbox:focus {
-	border-color: #11A3EA;
-	color: #0F4987;
+	border-color: gold;
+	color: #CCCCCC;
 }
 
 .inputbox:focus:-moz-placeholder {
@@ -1133,10 +1178,19 @@ ul.linklist li.responsive-menu a.responsive-menu-link:hover:before, ul.linklist 
 	border-color: #D31141;
 }
 
+
 .dropdown .dropdown-contents {
 	background: #fff;
 	border-color: #b9b9b9;
 	box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-contents {
+	color: #000000;
+}
+
+.dropdown-contents a:hover{
+	color:#25a1cc;
 }
 
 .dropdown-up .dropdown-contents {
@@ -1155,9 +1209,31 @@ ul.linklist li.responsive-menu a.responsive-menu-link:hover:before, ul.linklist 
 ---------------------------------------- */
 
 .notification_list p.notification-time {
-	color: #4C5D77;
+	color: #000000;
 }
 
 li.notification-reported strong, li.notification-disapproved strong {
+	color: #000000;
+}
+
+#notification_list a:hover {
+	color:#25a1cc;
+	font-style: underline;
+}
+
+#notification_list {
+	color: #000000;
+}
+
+
+a.button.icon-button.post-icon:hover {
 	color: #D31141;
+}
+
+.alert_title {
+	color: #000;
+}
+
+.alert_text {
+	color: #000;
 }
