--- a/theme/common.css
+++ b/theme/common.css
@@ -62,6 +62,7 @@ body {
 	margin: 0;
 	padding: 12px 0;
 	word-wrap: break-word;
+	color: #CCCCCC;
 	-webkit-print-color-adjust: exact;
 }
 
@@ -179,8 +180,8 @@ ol ol ul, ol ul ul, ul ol ul, ul ul ul {
 	border: 1px solid transparent;
 	border-radius: 8px;
 	margin: 0 auto;
-	max-width: 1152px;
-	min-width: 625px;
+	max-width: 1100px;
+	min-width: 1000px;
 	padding: 15px;
 }
 
