--- a/theme/forms.css
+++ b/theme/forms.css
@@ -21,10 +21,11 @@ select {
 	font-family: Verdana, Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	cursor: pointer;
-	vertical-align: middle;
-	border: 1px solid transparent;
-	padding: 1px;
 	font-size: 1em;
+	vertical-align: middle;
+	border: 1px solid #666666;
+	padding: 1px;
+	background-color: #FAFAFA;
 }
 
 select:focus {
@@ -232,15 +233,22 @@ fieldset.submit-buttons input {
 
 /* Main message box */
 #message-box {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.quickreply {
 	width: 80%;
+		display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #message-box textarea {
 	font-family: "Trebuchet MS", Verdana, Helvetica, Arial, sans-serif;
-	width: 450px;
 	height: 270px;
-	min-width: 100%;
-	max-width: 100%;
+	width: 80%;
 	font-size: 1.2em;
 	resize: vertical;
 	outline: 3px dashed transparent;
@@ -250,6 +258,9 @@ fieldset.submit-buttons input {
 	-ms-transition: all .5s ease;
 	-o-transition: all .5s ease;
 	transition: all .5s ease;
+	        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
 }
 
 /* Emoticons panel */
@@ -377,6 +388,7 @@ input.button1:focus, input.button2:focus, input.button3:focus {
 	float: left;
 	height: 24px;
 	padding: 3px;
+	background: transparent;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -409,7 +421,7 @@ input.button1:focus, input.button2:focus, input.button3:focus {
 	display: block;
 	float: right;
 	margin-right: 5px;
-	margin-top: 30px;
+	margin-top: -20px;
 }
 
 .search-header .inputbox { border: 0; }
