--- a/Styles/PiTSilver/theme/forms.css
+++ b/Styles/PiTSilver/theme/forms.css
@@ -25,7 +25,7 @@ select {
 	vertical-align: middle;
 	border: 1px solid #666666;
 	padding: 1px;
-	background-color: #FAFAFA;
+	background-color: #FAFAFA; /*TODO: Might need to replace */;
 }
 
 select:focus {
@@ -354,16 +354,28 @@ a.button2, input.button2, input.button3 {
 
 /* <a> button in the style of the form buttons */
 a.button1, a.button1:link, a.button1:visited, a.button1:active, a.button2, a.button2:link, a.button2:visited, a.button2:active {
-	text-decoration: none;
+/*	text-decoration: none;
 	padding: 2px 8px;
 	line-height: 250%;
 	vertical-align: text-bottom;
 	background-position: 0 1px;
+*/
+	  border-color: #007aa7;
+    vertical-align: middle;
+    background-color: #1f1f1f;
+    color: #CCCCCC;
+     border-style: solid;
+    border-width: 1px;
+    height: 18px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    margin-right: 5px;
 }
 
 /* Hover states */
 a.button1:hover, input.button1:hover, a.button2:hover, input.button2:hover, input.button3:hover {
-	border: 1px solid transparent;
+	border: 1px solid gold;
 	background-position: 0 100%;
 }
 
@@ -383,7 +395,7 @@ input.button1:focus, input.button2:focus, input.button3:focus {
 
 .search-box .inputbox {
 	background-image: none;
-	border-right-width: 0;
+	border-right-width: 1px;
 	border-radius: 4px 0 0 4px;
 	float: left;
 	height: 24px;
@@ -448,3 +460,8 @@ input.search {
 .medium { width: 50%;}
 .narrow { width: 25%;}
 .tiny { width: 10%;}
+
+
+
+
+}
