--- a/ext/paul999/ajaxshoutbox/styles/pitsilver/template/ajax_shoutbox_body.html
+++ b/ext/paul999/ajaxshoutbox/styles/pitsilver/template/ajax_shoutbox_body.html
@@ -38,7 +38,7 @@
                                 <input data-type="delete-id" type="hidden" name="id" value="" />
                                 <input data-type="delete-form-time" type="hidden" name="creation_time" value="" />
                                 <input data-type="delete-form-token" type="hidden" name="form_token" value="" />
-                                <input type="submit" name="delete" value="{L_DELETE}" class="button2" />
+                                <input type="submit" name="delete" value="{L_DELETE}" class="button2 shoutdelete" />
                             </form>
                         </dd>
                         <dd data-type="date" class="ajaxshoutbox_date"></dd>
