--- a/Styles/PiTSilver/template/memberlist_view.html
+++ b/Styles/PiTSilver/template/memberlist_view.html
@@ -5,7 +5,7 @@
 <!-- EVENT memberlist_view_content_prepend -->
 
 <form method="post" action="{S_PROFILE_ACTION}" id="viewprofile">
-<div class="panel bg1<!-- IF S_ONLINE --> online<!-- ENDIF -->">
+<div class="panel bg1">
 	<div class="inner">
 
 	<!-- IF AVATAR_IMG -->
